<resources>
    <string name="app_name">媒体盒子</string>
    <string name="home_fragment_header_search">搜索</string>
    <string name="press_again_to_exit">再按一次退出</string>
    <string name="currently_not_supported">目前尚未支持</string>
    <string name="unknown_view_holder">未知类型的模块！</string>
    <string name="unknown_route">未知路由</string>
    <string name="website_format_error">网址格式错误，请输入完整的网址</string>
    <string name="anime_detail_alias">别名：</string>
    <string name="anime_detail_index">索引：</string>
    <string name="anime_detail_type">类型：</string>
    <string name="anime_detail_tag">标签：</string>
    <string name="get_data_failed">获取数据失败！</string>
    <string name="delete_failed">刪除失败！</string>
    <string name="search_activity_cancel">取消</string>
    <string name="search_activity_tip">“%1$s”搜索结果，加载了%2$d条</string>
    <string name="search_activity_failed">搜索失败</string>
    <string name="search_input_keywords_tips">请输入搜索关键字</string>
    <string name="home">首页</string>
    <string name="everyday_anime">每日更新</string>
    <string name="everyday_anime_list">每日更新列表</string>
    <string name="rank_list">排行榜</string>
    <string name="anime_classify">分类</string>
    <string name="year_month_anime">新番列表：%s</string>
    <string name="get_home_tab_data_failed">获取首页标签信息失败:(</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="check_update">检查更新</string>
    <string name="current_version">当前版本 %s</string>
    <string name="check_update_failed">检查更新失败</string>
    <string name="checking">正在检查中…</string>
    <string name="find_new_version">发现新版本</string>
    <string name="is_latest_version">已是最新版本</string>
    <string name="start_download">开始下载，通知栏显示下载进度</string>
    <string name="download_failed">下载失败</string>
    <string name="download_succeed">新版下载完成</string>
    <string name="github">Github</string>
    <string name="data_source_url">数据源地址</string>
    <string name="data_source_info">数据源信息</string>
    <string name="open_source_licenses">开放源代码许可</string>
    <string name="search_history">搜索历史</string>
    <string name="cover_play_history_str_format">续播 %s</string>
    <string name="download_anime">缓存视频</string>
    <string name="please_delete_anime_in_24h">请于24h内手动删除缓存视频</string>
    <string name="anime_download_path">视频缓存目录</string>
    <string name="no_download_video">没有缓存视频</string>
    <string name="read_download_data_file">正在读取缓存文件…</string>
    <string name="play_list">播放列表</string>
    <string name="episode_bottom_sheet_format">共%d集</string>
    <string name="check_update_server">检查更新服务器</string>
    <string name="play_speed">倍速</string>
    <string name="device_list">设备列表</string>
    <string name="play_on_tv">投屏</string>
    <string name="play_common_speed">常用倍速设置为%.1fX</string>
    <string name="sending_data_please_wait">正在发送数据，请稍候…</string>
    <string name="dark_mode">深色模式</string>
    <string name="license">许可证</string>
    <string name="license_name">名称</string>
    <string name="dlna_step">投屏步骤</string>
    <string name="share_to">分享至</string>
    <string name="wechat">微信</string>
    <string name="weibo">微博</string>
    <string name="qq">QQ</string>
    <string name="copy_url">复制链接</string>
    <string name="open_url">外部浏览</string>
    <string name="cancel">取消</string>
    <string name="not_install_qq">未安装QQ</string>
    <string name="not_install_wechat">未安装微信</string>
    <string name="not_install_weibo">未安装微博</string>
    <string name="share_unknown_error">分享出现未知异常</string>
    <string name="already_copy_to_clipboard">已复制到剪贴板</string>
    <string name="more">更多</string>
    <string name="media_data">媒体记录</string>
    <string name="no_favorite">没有收藏记录</string>
    <string name="watch_history">观看历史</string>
    <string name="no_history">没有观看历史</string>
    <string name="delete_all_history_info">清空所有历史记录，包括搜索历史、观看历史和观看进度</string>
    <string name="confirm_delete_all_history">确定要删除所有历史记录？包括搜索历史、观看历史和观看进度</string>
    <string name="delete_all_history">清空历史记录</string>
    <string name="delete_all_history_succeed">清空所有历史记录成功！</string>
    <string name="delete_all_history_failed">清空所有历史记录失败！</string>
    <string name="clear_cache">清空缓存</string>
    <string name="clear_cache_info">清空所有缓存，不包括缓存视频</string>
    <string name="clear_cache_succeed">清空缓存成功！</string>
    <string name="clear_cache_failed">清空缓存失败！</string>
    <string name="detail_page">详情页</string>
    <string name="load_data_failed_click_to_retry">加载数据失败，请重试</string>
    <string name="choose_episode">选集</string>
    <string name="test_device">测试设备</string>
    <string name="app_icon_describe">APP图标修改自动漫《日常》</string>
    <string name="favorite_succeed">收藏成功</string>
    <string name="remove_favorite_succeed">取消收藏成功</string>
    <string name="parsing_video">解析视频中…</string>
    <string name="shortcuts_disabled">暂时无法使用</string>
    <string name="shortcuts_favorite_long">我的收藏</string>
    <string name="shortcuts_favorite_short">追番</string>
    <string name="shortcuts_everyday_long">每日更新动漫</string>
    <string name="shortcuts_everyday_short">日更动漫</string>
    <string name="shortcuts_download_long">视频</string>
    <string name="shortcuts_download_short">缓存视频</string>
    <string name="attention">声明</string>
    <string name="statement">本软件免费开源，仅可用作学习交流！\n因此软件产生的版权问题，软件作者概不负责！\n如果用起来还不错欢迎去Github仓库点个Star</string>
    <string name="download_anime_delete_tip">是否删除该番剧？</string>
    <string name="update_widget">正在更新小组件</string>
    <string name="widget_everyday_anime">每日更新动漫</string>
    <string name="play_sound_only">只播放音频</string>
    <string name="vertical_reverse">上下镜像</string>
    <string name="horizontal_reverse">左右镜像</string>
    <string name="play_error_retry">点击重试</string>
    <string name="play_parse_error_retry">重新解析</string>
    <string name="play_error">播放错误，网络错误或目标资源已失效</string>
    <string name="reverse">镜像</string>
    <string name="no_reverse">正常</string>
    <string name="bottom_progress">底部进度条</string>
    <string name="night_mode_follow_system">跟随系统</string>
    <string name="light">浅色</string>
    <string name="dark">深色</string>
    <string name="follow_system">跟随系统</string>
    <string name="ok">确定</string>
    <string name="no_result_info">搜索结果为空</string>
    <string name="no_more_info">没有更多了</string>
    <string name="play_auto_seek">定位到上次进度</string>
    <string name="warning">警告</string>
    <string name="delete">删除</string>
    <string name="clean">清理</string>
    <string name="media_codec">硬解码</string>
    <string name="open_by_external_player">外部播放器</string>
    <string name="choose_video_player">请选择视频播放器</string>
    <string name="matched_app_not_found">没有找到匹配的程序</string>
    <string name="skip_by_website">根据网址跳转</string>
    <string name="input_a_website">请输入网址</string>
    <string name="input_a_website_domain">请输入域名</string>
    <string name="advanced_setting">高级设置</string>
    <string name="advanced">高级</string>
    <string name="website_domain">域名</string>
    <string name="recovery_default">恢复默认</string>
    <string name="set_domain_to_default">设置域名为默认：%s</string>
    <string name="old_path">旧</string>
    <string name="do_not_finish_the_page_when_parse_download_data">缓存失败，解析缓存数据时请勿关闭页面</string>
    <string name="restore_screen">还原屏幕</string>
    <string name="touch_down_high_speed"><![CDATA[>> %.1fX倍速播放]]></string>
    <string name="play_position_tip">上次看到：</string>
    <string name="play_position_skip_tip">点击返回：</string>
    <string name="will_you_try_to_sniffer_video">是否尝试嗅探视频？</string>
    <string name="getting_complex_video_failed">获取视频链接失败，%s</string>
    <string name="start_get_complex_video">开始获取视频链接…%s</string>
    <string name="getting_complex_video">正在获取视频链接中…</string>
    <string name="get_complex_video_finished">结束获取…%s</string>
    <string name="get_complex_videos">获取复杂视频链接</string>
    <string name="please_choose_a_video_link">请选择一个视频链接(共%s条)</string>
    <string name="load_danmaku_failed">弹幕加载失败</string>
    <string name="cancel_to_get_video_url">取消获取视频链接…</string>
    <string name="fail_to_parse_page_url">解析网页地址失败</string>
    <string name="loading_danmaku">加载弹幕中…</string>
    <string name="the_video_has_danmaku">此视频含弹幕</string>
    <string name="send_a_danmaku">已装载%d条弹幕，发个弹幕见证当下</string>
    <string name="send_a_danmaku_is_disabled">弹幕功能不可用</string>
    <string name="send_danmaku_failed">发送弹幕失败，%s</string>
    <string name="please_input_danmaku_text">请输入弹幕内容！</string>
    <string name="danmaku_exist_shield_content">存在被屏蔽文字，发送失败！</string>
    <string name="custom_data_source">自定义数据源：%s</string>
    <string name="config_custom_data_source">配置自定义数据源</string>
    <string name="custom_data_source_describe">具体使用方法请访问Github仓库</string>
    <string name="using_custom_data_source">注意，自定义数据源功能已启用，请确保ads包无恶意代码！</string>
    <string name="restart">重启</string>
    <string name="custom_data_source_tip">请务必确保ads包无恶意代码\n需要重启App，是否继续？</string>
    <string name="ask_overwrite_file">存在同名文件，是否覆盖？</string>
    <string name="overwrite_file">覆盖原有文件</string>
    <string name="overwrite_file_and_restart">覆盖原有文件并重启</string>
    <string name="do_not_overwrite_file">不要覆盖，取消导入</string>
    <string name="default_data_source">默认数据源</string>
    <string name="import_data_source">确认导入数据源？</string>
    <string name="import_data_source_failed">导入数据源失败：%s</string>
    <string name="import_data_source_success">导入数据源成功：%s</string>
    <string name="ask_delete_data_source">确认删除此数据源？</string>
    <string name="request_restart_app">需要重启App，是否继续？</string>
    <string name="skin_center">皮肤中心</string>
    <string name="data_source_jar_version_name">版本：%s</string>
    <string name="data_source_jar_version_code">版本代号：%s</string>
    <string name="user_notice_update">使用须知更新！</string>
    <string name="user_notice">使用须知</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notice_activity_error_param">跳转到通知界面错误，参数传递不正确！</string>
    <string name="continue_to_play">继续播放</string>
    <string name="play_video_now">立即播放</string>
    <string name="replay_video">重新播放</string>
    <string name="play_end_hint">已是最后一集</string>
    <string name="jump_to_browser_http_warning">此网址使用HTTP协议，不能保证安全性，是否要继续打开浏览器访问？</string>
    <string name="jump_to_data_source_website_warning">若要访问，请谨慎下载来历不明的文件</string>
    <string name="input_custom_danmaku_url">输入自定义弹幕链接</string>
    <string name="input_danmaku_url">请输入弹幕链接</string>
    <string name="danmaku_loaded">弹幕已加载</string>
    <string name="request_danmaku_failed">弹幕获取失败\n%s</string>
    <string name="danmaku">弹幕</string>
    <string name="reset_danmaku_progress">还原</string>
    <string name="forward_danmaku_progress">+2s</string>
    <string name="rewind_danmaku_progress">-2s</string>
    <string name="cannot_rewind_over_10s">后退不能超过10秒！</string>
    <string name="cannot_forward_over_10s">前进不能超过10秒！</string>
    <string name="player_night_screen">夜间屏幕</string>
    <string name="dns_over_https">使用安全DNS</string>
    <string name="dns_server_describe">通过安全连接访问网站</string>
    <string name="select_dns_server">选择DNS提供商</string>
    <string name="custom_dns_server">自定义DNS提供商</string>
    <string name="custom_dns_server_describe">自定义DNS提供商。例如：https://1.0.0.1/dns-query</string>
    <string name="config_data_source_tip">点击数据源条目可使用数据源，点击右上角按钮可恢复默认数据源，长按数据源条目可删除数据源</string>
    <string name="invalid_data_source_suffix">无效数据源文件后缀：%s</string>
    <string name="the_data_source_is_using_now">正在使用此数据源！</string>
    <string name="plugin_installer_install">安装</string>
    <string name="plugin_installer_launch">启动</string>
    <string name="plugin_installer_download">下载</string>
    <string name="plugin_installer_cancel">关闭</string>
    <string name="crash_msg">日志已上传分析，建议去github提交issue加快处理</string>
    <string name="crash_open_issue">复制信息并打开Github</string>
    <string name="crash_version">版本</string>
    <string name="crash_error">崩溃信息</string>
    <string name="crash_info">系统信息</string>
    <string name="dlna_desc">1. 确保电视和手机在同一WiFi下，打开支持投屏的电视。\n2. 点击上方搜索到的设备进行投屏。\n3. 注意，部分未知格式的视频可能无法投屏。</string>
</resources>