<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_circle_corner_bottom_dialog_white_12_skin"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="13dp"
    android:paddingEnd="13dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="17dp"
        android:gravity="center"
        android:text="@string/share_to"
        android:textColor="@color/foreground_main_color_2_skin"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_to_qq"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="@string/qq"
            android:textColor="@color/foreground_main_color_2_skin"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/ic_qq_main_color_2_34_skin" />

        <TextView
            android:id="@+id/tv_to_wechat"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="@string/wechat"
            android:textColor="@color/foreground_main_color_2_skin"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/ic_wechat_main_color_2_34_skin" />

        <TextView
            android:id="@+id/tv_to_weibo"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="@string/weibo"
            android:textColor="@color/foreground_main_color_2_skin"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/ic_weibo_main_color_2_34_skin" />

        <TextView
            android:id="@+id/tv_copy_link"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="@string/copy_url"
            android:textColor="@color/foreground_main_color_2_skin"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/ic_link_main_color_2_34_skin" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="17dp"
        android:text="@string/cancel"
        android:textColor="@color/foreground_main_color_2_skin"
        android:textSize="14sp" />

</LinearLayout>