<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginVertical="16dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/plugin_install_info_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/plugin_install_launch"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="right"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:text="@string/plugin_installer_launch"
        android:textColor="@color/main_color_2_skin"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/plugin_install_download"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="right"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:text="@string/plugin_installer_download"
        android:textColor="@color/main_color_2_skin"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/plugin_install_install"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="right"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:text="@string/plugin_installer_install"
        android:textColor="@color/main_color_2_skin"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/plugin_install_cancel"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="right"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:text="@string/plugin_installer_cancel"
        android:textColor="@color/main_color_2_skin" />

</LinearLayout>