<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_skin"
    tools:context=".view.activity.DlnaActivity">

    <com.su.mediabox.view.component.AnimeToolbar
        android:id="@+id/atb_dlna_activity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:title="@string/play_on_tv"
        app:titleColor="@color/foreground_white_skin"
        app:toolBarBackground="@color/main_color_2_skin" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/atb_dlna_activity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main_color_skin"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="12dp"
                    android:text="@string/device_list"
                    android:textColor="@color/foreground_white_skin"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/pb_dlna_activity_searching"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:indeterminateTint="@color/foreground_white_skin"
                    android:indeterminateTintMode="src_atop" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_dlna_activity_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_color_skin"
                android:paddingVertical="12dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/dlna_step"
                android:textColor="@color/foreground_white_skin"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:text="@string/dlna_desc"
                android:textColor="@color/foreground_main_color_2_skin"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>